--- a/exercise/package.json
+++ b/exercise/package.json
@@ -1,37 +1,49 @@
 {
-  "name": "angular2-ajax",
+  "name": "ddr_mine_client",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
+    "dev-server": "webpack-dev-server -d --content-base . --port 5000",
+    "build": "webpack -wd",
+    "specs": "live-server --open=specs.build/specs.html",
+    "open": "opener http://localhost:5000/webpack-dev-server/index.html",
+    "dev": "node ./node_modules/concurrently/src/main.js --kill-others \"npm run build\" \"npm run specs\"  \"npm run dev-server\"; npm run open  "
   },
+  "author": "Nicholas Johnson",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "@angular/upgrade": "2.0.0-rc.1",
-    "systemjs": "0.19.27",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.9",
-    "bootstrap": "^3.3.6"
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "ts-loader": "^0.8.2",
-    "typescript": "^1.8.10",
-    "typings": "^0.8.1",
-    "webpack": "^1.13.1"
+    "angular2-template-loader": "^0.5.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "concurrently": "^2.1.0",
+    "css-loader": "^0.23.1",
+    "d3": "3.4.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "jasmine-core": "^2.4.1",
+    "live-server": "^1.0.0",
+    "node-sass": "^3.8.0",
+    "nvd3": "^1.8.4",
+    "reflect-metadata": "0.1.3",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
