--- a/escape_the_dungeon_exercise_solutions/package.json
+++ b/escape_the_dungeon_exercise_solutions/package.json
@@ -41,7 +41,7 @@
     "reflect-metadata": "0.1.3",
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.1",
-    "typescript": "^2.0.2",
+    "typescript": "2.0.2",
     "typings": "^1.3.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
